fixed footer alignment

--- a/style.css
+++ b/style.css
@@ -57,9 +57,6 @@ button {
 }
 
 .footer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
     display: flex;
     align-items: center;
     justify-content: center;
